Database migrated and initial test values added

--- a/Crudman/Components/Pages/URLModelPages/Index.razor
+++ b/Crudman/Components/Pages/URLModelPages/Index.razor
@@ -6,9 +6,9 @@
 @inject IDbContextFactory<URLModelContext> DbFactory
 @inject NavigationManager NavigationManager
 
-<PageTitle>Index</PageTitle>
+<PageTitle>URL Database</PageTitle>
 
-<h1>Index</h1>
+<h1>URL Database</h1>
 
 <p>
     <a href="urlmodels/create">Create New</a>
