--- a/Crudman/Components/Layout/NavMenu.razor
+++ b/Crudman/Components/Layout/NavMenu.razor
@@ -15,8 +15,8 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="config">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Config
+            <NavLink class="nav-link" href="urlmodels">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> URL Database
             </NavLink>
         </div>
 
