--- a/Crudman/Components/Pages/URLModelPages/Delete.razor
+++ b/Crudman/Components/Pages/URLModelPages/Delete.razor
@@ -18,7 +18,7 @@
     }
     else {
         <dl class="row">
-            <dt class="col-sm-2">Order</dt>
+            <dt class="col-sm-2">Ordering Number</dt>
             <dd class="col-sm-10">@urlmodel.Order</dd>
         </dl>
         <dl class="row">
