--- a/Crudman/Components/Pages/URLModelPages/Index.razor
+++ b/Crudman/Components/Pages/URLModelPages/Index.razor
@@ -15,7 +15,7 @@
 </p>
 
 <QuickGrid Class="table" Items="context.URLModel">
-    <PropertyColumn Property="urlmodel => urlmodel.Order" Title="Order #" />
+    <PropertyColumn Property="urlmodel => urlmodel.Order" Title="Order #" IsDefaultSortColumn=true/>
     <PropertyColumn Property="urlmodel => urlmodel.URL" Title="URL" />
 
     <TemplateColumn Context="urlmodel"> 
